[package]
name = "bm2"
version = "0.2.0"
authors = [
    "Raphaël Thériault",
    "Lee Bousfield",
]
edition = "2018"
license = "MIT"
description = "CLI for the Beat Saber mod repository BeatMods2"

[dependencies]
anyhow = "1.0.26"
dialoguer = "0.5.0"
indicatif = "0.13.0"
manifest = { path = "./manifest" }
reqwest = { version = "0.10.1", features = ["blocking", "cookies"] }
structopt = "0.3.7"
walkdir = "2.3.1"
zip = { version = "0.5.4", default-features = false, features = ["deflate", "time"] }

[features]
nightly = []

[workspace]
members = ["manifest"]
