[package]
name = "manifest"
version = "0.1.0"
authors = ["Raphaël Thériault"]
edition = "2018"
license = "MIT"

[dependencies]
semver = { version = "0.9.0", features = ["serde"] }
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.42"
url = { version = "2.1.0", features = ["serde"] }
