[package]
name = "manifest"
version = "0.3.0"
authors = ["Raphaël Thériault"]
edition = "2018"
license = "MIT"

[dependencies]
lazy_static = "1.4"
regex = "1.3"
semver = { git = "https://github.com/raftario/semver_rs", branch = "minmax", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.1", features = ["serde"] }
